=======
Edi 0.3
=======

Features:

  * Option to inserts spaces instead of tabs
  * Update to EFL 1.17 release for better toolbar handling
  * Add file filtering for hunting down files in the list

Bug fixes:

  * Focus input popups when they appear
  * Support fish and other non-bash shells for build & test


=======
Edi 0.2
=======

Features:

  * Highlight the current line when editing
  * Update to EFL 1.16 release

Bug fixes

  * Correct selection so it works backwards as well
  * Don't remove highlighting of lines when backspace/delete or newline are entered
  * When opening unrecognised files and cancelling choice don't remember as opened
  * Fix issue with whitespace indenting on newline when splitting at whitespace


=======
Edi 0.1
=======

Features:

  * Added a monospaced font picker to settings
  * Indent newlines to match whitespace in the previous line
  * Trim trailing whitespace when saving

Bug fixes

  * T2057 Line numbers are not fully visible in new windows
  * #3 assume bash as default shell when creating a new project
  * #4 Unable to compile


0.0.9
-----

  * New icon :)
  * Integrated elm_code editor
    - faster code highlighting
    - highlighting of error lines
    - highlighting of TODO lines
    - line width indicator in the editor
    - configurable tab stop width

  * Add a main menu and tidy up toolbar
  * Remember UI settings per project
  * Add launch configuration so we can run a built binary


0.0.2
-----

Features

  * Add a settings screen to control various display features
  * Support turning autosave on and off

Bug fixes

  * Fix issues with re-opening closed tabs
  * Fix crash-on-open for some systems
  * Fix username lookup for Windows


0.0.1
-----

Features:

  * Editing and saving text files
  * Tabbed browsing of open files
  * Opening editor in a new window
  * Displaying directory for the project (directory)
  * link files out to external viewers / editors